src/objects/Branding__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Brand_Description__c</fullName>
        <label>Brand Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guaranteed_response_time__c</fullName>
        <description>Guaranteed response time in hours</description>
        <inlineHelpText>Guaranteed response time in hours</inlineHelpText>
        <label>Guaranteed response time</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCC_designation__c</fullName>
        <label>PCC designation</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Branding</label>
</CustomObject>